--- a/templates/RF006-TLmanuten.html
+++ b/templates/RF006-TLmanuten.html
@@ -69,9 +69,20 @@
             <!-- Serviços encaminhados -->
              <section class="container-servico-encaminhado">
                 <h2>Serviços Encaminhados</h2>
-                <div class="servico-encaminhado">
-                    <p class="servico-encaminhado-dia-semana">QUI</p><p class="servico-encaminhado-dia">10</p>
-                    <p class="servico-encaminhado-local">Bloco B | Sala 09</p>
+                <div class="container-encaminhamento">
+                    <div class="servico-encaminhado">
+                        <div class="servico-encaminhado-data">
+                            <p class="servico-encaminhado-dia-semana">QUI</p><p class="servico-encaminhado-dia">10</p>
+                        </div>
+                        <p class="servico-encaminhado-local">Bloco B | Sala 09</p>
+                    </div>
+
+                    <div class="servico-encaminhado">
+                        <div class="servico-encaminhado-data">
+                            <p class="servico-encaminhado-dia-semana">QUI</p><p class="servico-encaminhado-dia">10</p>
+                        </div>
+                        <p class="servico-encaminhado-local">Bloco B | Sala 09</p>
+                    </div>
                 </div>
              </section>
         </main>
