--- a/static/CSS/RF006-TLmanuten.css
+++ b/static/CSS/RF006-TLmanuten.css
@@ -12,7 +12,7 @@ header{
 
 #cumprimentacao{
     align-self: center;
-    font-size: 2rem;
+    font-size: 2.5rem;
     font-weight: lighter;
 }
 
@@ -64,7 +64,7 @@ header{
 /* Estilização da area "Serviço de Hoje" */
 main{
     width: 100vw;
-    height: 70vh;
+    height: 65vh;
     background-color: var(--color06);
     border-top-left-radius: 5rem;  
     border-top-right-radius: 5rem; 
@@ -142,12 +142,13 @@ hr{
 
 .container-servico-encaminhado{
     height: 45%;
-    margin:2rem 1rem 0rem 1rem;
+    margin: 0rem 1rem 0rem 1rem;
 }
 
 .container-servico-encaminhado h2{
     font-size: 2rem;
     color: var(--color01);
+    margin-left: 1rem;
 }
 
 .container-encaminhamento{
@@ -157,7 +158,7 @@ hr{
 
 .servico-encaminhado{
     background-color: var(--color01);
-    height: 46%;
+    height: 60%;
     width: 45%;
     margin: 0.5rem;
     border-radius: 1rem;
@@ -199,26 +200,30 @@ hr{
 
 .container-footer{
     width: 100vw;
-    height: 12vh;
+    height: 17vh;
     background-color: var(--color06);
     color: var(--color01);
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     
 }
 
 .container-footer p{
-    padding: 0.5rem;
+    padding: 1rem;
 }
 
 /* Estilo do btn-fazer-solicitacao */
 .btn-fazer-solicitacao{
     border: var(--color03) solid 0.1rem;
     border-radius: 5rem;
-    padding: 0.5rem 8rem 0.5rem 8rem;
+    padding: 0.5rem;
     background-color: rgba(0, 0, 0, 0.158);
     color: var(--color03);
     font-weight: bold;
     transition-duration: 0.2s;
+    margin: 0rem 3rem 0rem 3rem;
 }
 
 .btn-fazer-solicitacao:hover{
