--- a/templates/RF004A-detlSolic.html
+++ b/templates/RF004A-detlSolic.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    <!-- Definições básicas de meta tags: caracteres e responsividade -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Importação de arquivos CSS: global e específico desta página -->
     <link rel="stylesheet" href="/static/CSS/global.css">
     <link rel="stylesheet" href="/static/CSS/RF004A-detlSolic.css">
+    <!-- Biblioteca jQuery para manipulação de DOM e requisições Ajax -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-
-    <!-- Link para os ICONS -->
+    <!-- Biblioteca Font Awesome para uso de ícones na página -->
     <script src="https://kit.fontawesome.com/e9b74fb3c4.js" crossorigin="anonymous"></script>
+
     <title>EASY-REQUEST</title>
 </head>
 <body>
+    <!-- Navegação principal com botão de voltar -->
     <nav>
         <section class="container-header">
             <div class="container-header_btn">
@@ -19,48 +23,61 @@
             </div>
         </section>
     </nav>
+
+    <!-- Conteúdo principal da página -->
     <main class="conteudo-principal">
         <section class="detalhes-solicitacao">
+            <!-- Cabeçalho da solicitação com título e autor -->
             <div class="detalhes-solicitacao__cabecalho">
                 <h1 class="detalhes-solicitacao__titulo">{{campo_sala}} - {{campo_servico}}</h1>
                 <p class="detalhes-solicitacao__autor">{{campo_nome_solicitante}} - {{campo_funcao_solicitante}}</p>
             </div>
+            <!-- Linha divisora entre o cabeçalho e o corpo da solicitação -->
             <hr class="detalhes-solicitacao__divisor">
+
+            <!-- Corpo da solicitação com a descrição do serviço e botão de encaminhamento -->
             <div class="detalhes-solicitacao__corpo">
                 <p class="detalhes-solicitacao__rotulo-descricao">Descrição</p>
                 <p class="detalhes-solicitacao__texto-descricao">
                     {{campo_descricao}}
                 </p>
-                <a href="/RF005/{{campo_id_solicitacao}}"><button class=" botao botao-cadastro">Encaminhar</button></a>
+                <!-- Botão para encaminhar a solicitação, redirecionando para outra página -->
+                <a href="/RF005/{{campo_id_solicitacao}}"><button class="botao botao-cadastro">Encaminhar</button></a>
             </div>
         </section>
     </main>
 </body>
 </html>
-<!-- <script type="text/javascript">
-    function mostraSolicitacao() {
-        // Obter a URL atual
-        var url_atual = window.location.href;
+
+<!-- 
+    Script comentado que poderia exibir os detalhes da solicitação ao carregar a página 
+    utilizando uma requisição Ajax:
     
-        // Criar um objeto URLSearchParams com a query string da URL
-        var params = new URLSearchParams(new URL(url_atual).search);
-    
-        // Obter o valor do parâmetro 'solicitacao'
-        var solicitacao = params.get('solicitacao');
+    <script type="text/javascript">
+        function mostraSolicitacao() {
+            // Obter a URL atual
+            var url_atual = window.location.href;
         
-        $.ajax({
-        url: "('/api/RF004A/" + solicitacao,
-        type: "GET",
-        success: function (encaminha){
-            console.log(encaminha);
-        var tag_nome = "<p>" + encaminha['nome'] + "</p>";
-        var tag_descricao = "<p>" + encaminha['descricao'] + "</p>";
-        $(".detalhes-solicitacao__autor").html(tag_nome);
-        $(".detalhes-solicitacao__texto-descricao").html(tag_descricao);
-
-
+            // Criar um objeto URLSearchParams com a query string da URL
+            var params = new URLSearchParams(new URL(url_atual).search);
+        
+            // Obter o valor do parâmetro 'solicitacao'
+            var solicitacao = params.get('solicitacao');
+            
+            $.ajax({
+                url: "('/api/RF004A/" + solicitacao,
+                type: "GET",
+                success: function (encaminha){
+                    console.log(encaminha);
+                    var tag_nome = "<p>" + encaminha['nome'] + "</p>";
+                    var tag_descricao = "<p>" + encaminha['descricao'] + "</p>";
+                    $(".detalhes-solicitacao__autor").html(tag_nome);
+                    $(".detalhes-solicitacao__texto-descricao").html(tag_descricao);
+                }
+            })
         }
-        })
-    }
-    $(document).ready(mostraSolicitacao); -->
+        
+        // Executar a função mostraSolicitacao assim que a página for carregada
+        $(document).ready(mostraSolicitacao);
     </script>
+-->
