--- a/templates/RF003-solic.html
+++ b/templates/RF003-solic.html
@@ -10,6 +10,7 @@
         <!-- Scripts JavaScript: Carregamento dos arquivos de script da página -->
         <script defer src="/static/JS/RF003-solic.js"></script>
         <script defer src="/static/JS/funcao-data.js"></script>
+        
         <!-- Biblioteca de ícones do Font Awesome para uso de ícones na página -->
         <script src="https://kit.fontawesome.com/e9b74fb3c4.js" crossorigin="anonymous"></script>
         <!-- Biblioteca jQuery para facilitar o uso de Ajax e manipulação de DOM -->
@@ -22,6 +23,9 @@
             <section class="container-header">
                 <div class="container-header_btn">
                     <button class="container-header_btn-voltar" href=''><i class="fa-solid fa-arrow-left"></i>Voltar</button>
+                </div>
+                <div class="horas"></div>
+                    <h2 class="saudacao" id="saudacao"></h2>
                 </div>
                 <div class="container-header_data">
                     <p class="dia-semana" id="dia-semana">Qui</p><p class="dia" id="dia">10</p><p class="mes" id="mes">Set</p>
