--- a/templates/RF004-ADMrecbSolic.html
+++ b/templates/RF004-ADMrecbSolic.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/static/CSS/global.css">
     <link rel="stylesheet" href="/static/CSS/RF004-ADMrecbSolic.css">
     <script defer src="/static/JS/funcao-data.js"></script>
+    <script defer src = "/static/JS/funcao-horas.js"></script>
     <title>EASY-REQUEST - Inicial</title>
 </head>
 <body>
@@ -14,6 +15,9 @@
         <!-- Container para a data e botão de menu -->
         <div class="header__date-container">
             <div class="header__button"></div>
+            <div class="horas">
+                <h2 class="saudacao" id="saudacao"></h2>
+            </div>
             <div class="header__date">
                 <!-- Dia da semana -->
                 <p class="header__day-of-week" aria-label="Dia da semana" id="dia-semana">Qui</p>
@@ -22,6 +26,7 @@
                 <!-- Mês -->
                 <p class="header__month" aria-label="Mês" id="mes">Set</p>
             </div>
+
         </div>
         <!-- Informações do usuário logado -->
         <section class="header__user-info">
