--- a/templates/RF006-TLmanuten.html
+++ b/templates/RF006-TLmanuten.html
@@ -37,10 +37,10 @@
             </section>
         </header>
         <main>
+            <section class="container-servico">
             <!-- Serviços a serem feitos no dia -->
             <h1>Serviço de <p>hoje</p></h1>
             <hr/>
-            <section class="container-servico">
             <!-- Serviço á ser feito -->
                 <div class="servico">
                     <div class="servico_hora-local">
@@ -84,16 +84,12 @@
                         <p class="servico-encaminhado-local">Bloco B | Sala 09</p>
                     </div>
                 </div>
+                <div class="container-solicitacao">
+                    <h2>Quer fazer uma Solicitação?</h2>
+                    <p>Solicite com o botão abaixo!</p>
+                    <button class="btn-fazer-solicitacao">Fazer Solicitação</button>
+                </div>
              </section>
         </main>
-
-        <!-- Rodape -->
-        <footer>
-            <section class="container-footer">
-                <h2>Quer fazer uma Solicitação?</h2>
-                <p>Solicite com o botão abaixo!</p>
-                <button class="btn-fazer-solicitacao">Fazer Solicitação</button>
-            </section>
-        </footer>
     </body>
 </html>
