Mensagens de Erro e Sucesso na tela  RF003

--- a/templates/RF002-log.html
+++ b/templates/RF002-log.html
@@ -12,6 +12,8 @@
          <link rel="stylesheet" href="/static/CSS/RF002-log.css">
         <!-- Link Arquivo JS -->
          <script defer src="/static/JS/RF002-log.js"></script>
+         <!-- link JS biblioteca SweetAlert -->
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
     </head>
     <body>
