--- a/templates/RF005-encamSolic.html
+++ b/templates/RF005-encamSolic.html
@@ -18,6 +18,8 @@
          <script defer src="/static/JS/funcao-data.js"></script>
          <!-- Link para o Ajax -->
          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+         <!-- link JS biblioteca SweetAlert -->
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
     </head>
     <body>
