--- a/templates/RF006-TLmanuten.html
+++ b/templates/RF006-TLmanuten.html
@@ -16,6 +16,8 @@
         <script src="https://kit.fontawesome.com/e9b74fb3c4.js" crossorigin="anonymous"></script>
         <!-- link Arquivo JS data -->
          <script defer src="/static/JS/funcao-data.js"></script>
+         <!-- link JS biblioteca SweetAlert -->
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
     </head>
     <body>
