--- a/templates/RF007-manutConfirm.html
+++ b/templates/RF007-manutConfirm.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="/static/CSS/global.css">
     <!-- Link para o CSS específico desta página -->
     <link rel="stylesheet" href="/static/CSS/RF007-manutConfirm.css">
+    <!-- link JS biblioteca SweetAlert -->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     
     <!-- Título da página -->
     <title>Finalizar Tarefa</title>
