--- a/templates/RF001-cad.html
+++ b/templates/RF001-cad.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="/static/CSS/global.css">
+
     <link rel="stylesheet" href="/static/CSS/RF001-cad.css">
+    <!-- link JS biblioteca SweetAlert -->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
     <title>EASY-REQUEST - Cadastro</title>
 </head>
 <body>
