--- a/templates/RF003-solic.html
+++ b/templates/RF003-solic.html
@@ -14,6 +14,8 @@
         <script src="https://kit.fontawesome.com/e9b74fb3c4.js" crossorigin="anonymous"></script>
         <!-- Biblioteca jQuery para facilitar o uso de Ajax e manipulação de DOM -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+        <!-- link JS biblioteca SweetAlert -->
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     </head>
     <body>
         <!-- Cabeçalho: Informações do usuário e data -->
