--- a/templates/RF008-fimchamado.html
+++ b/templates/RF008-fimchamado.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="/static/CSS/RF008-fimchamado.css">
     <!-- Biblioteca de ícones Font Awesome -->
     <script src="https://kit.fontawesome.com/e9b74fb3c4.js" crossorigin="anonymous"></script>
+    <!-- link JS biblioteca SweetAlert -->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     
     <!-- Título da página -->
     <title>Finalizar Chamado</title>
