Fazendo aparecer o nome da pessoa logada na tela RF005

--- a/templates/RF005-encamSolic.html
+++ b/templates/RF005-encamSolic.html
@@ -28,8 +28,8 @@
             <section class="container-header">
                 <figure><img src="https://pics.craiyon.com/2023-06-27/287f2a60c2e74386b5a89c517eb527dc.webp" alt="Imagem de Perfil"></figure>
                 <div class="container-header_user-info">
-                    <h2 class="container-header_user-nome">Paulo de Oliveira</h2>
-                    <p class="container-header_user-cargo">Supervisor de Manutenção</p>
+                    <h2 class="container-header_user-nome">{{campo_nome}}</h2>
+                    <p class="container-header_user-cargo">{{campo_funcao}}</p>
                 </div>
             </section>
             <section class="container-header-data">
@@ -47,20 +47,6 @@
         <main>
             <section class="container-main">
                     <div value="form_select-user" id="form_select-user" name="form_select-user">
-                        
-                        <div class="opcao caixa-opcao">
-                            <figure><img src="https://pics.craiyon.com/2023-06-27/287f2a60c2e74386b5a89c517eb527dc.webp" alt="Imagem de Perfil"></figure>
-                            <div class="opcao_user"><p>Pintor</p>Heitor Lima </div>
-                            <p class="status_disponivel">Disponível</p>
-                            <p class="status_n-disponivel">Não Disponível</p>
-                        </div>
-
-                        <div class="opcao caixa-opcao">
-                            <figure><img src="https://pics.craiyon.com/2023-06-27/287f2a60c2e74386b5a89c517eb527dc.webp" alt="Imagem de Perfil"></figure>
-                            <div class="opcao_user"><p>Pintor</p>Heitor Lima </div>
-                            <p class="status_disponivel">Disponível</p>
-                            <p class="status_n-disponivel">Não Disponível</p>
-                        </div>
 
                     </div>
                     
