--- a/templates/RF002-log.html
+++ b/templates/RF002-log.html
@@ -13,7 +13,7 @@
         <!-- Link Arquivo JS -->
          <script defer src="/static/JS/RF002-log.js"></script>
          <!-- link JS biblioteca SweetAlert -->
-        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     </head>
     <body>
