--- a/templates/RF008-fimchamado.html
+++ b/templates/RF008-fimchamado.html
@@ -10,7 +10,7 @@
     <!-- Biblioteca de ícones Font Awesome -->
     <script src="https://kit.fontawesome.com/e9b74fb3c4.js" crossorigin="anonymous"></script>
     <!-- link JS biblioteca SweetAlert -->
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     
     <!-- Título da página -->
     <title>Finalizar Chamado</title>
