--- a/templates/RF001-cad.html
+++ b/templates/RF001-cad.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="/static/CSS/RF001-cad.css">
     <!-- link JS biblioteca SweetAlert -->
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <title>EASY-REQUEST - Cadastro</title>
 </head>
