--- a/templates/RF006A-aceitaSolic.html
+++ b/templates/RF006A-aceitaSolic.html
@@ -12,7 +12,7 @@
     <!-- Biblioteca Font Awesome para uso de ícones na página -->
     <script src="https://kit.fontawesome.com/e9b74fb3c4.js" crossorigin="anonymous"></script>
     <!-- link JS biblioteca SweetAlert -->
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <title>EASY-REQUEST</title>
 </head>
