--- a/templates/RF007-manutConfirm.html
+++ b/templates/RF007-manutConfirm.html
@@ -11,7 +11,7 @@
     <!-- Link para o CSS específico desta página -->
     <link rel="stylesheet" href="/static/CSS/RF007-manutConfirm.css">
     <!-- link JS biblioteca SweetAlert -->
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     
     <!-- Título da página -->
     <title>Finalizar Tarefa</title>
